<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_inputName"
        android:inputType="textCapWords"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/inputNota01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inputNota01"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin" />

        <EditText
            android:id="@+id/inputNota02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inputNota02"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin" />

    </LinearLayout>

    <EditText
        android:id="@+id/inputNota03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_inputNota03"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/inputNota04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inputNota04"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin" />

        <EditText
            android:id="@+id/inputNota05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inputNota05"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/txtPromedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/button_margin" />
    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/button_margin" />





</LinearLayout>